--- a/style/style.css
+++ b/style/style.css
@@ -47,6 +47,8 @@ button,
 input {
   outline: none;
   border: none;
+}
+button {
   cursor: pointer;
 }
 p {
@@ -67,6 +69,8 @@ p {
   display: block;
   width: 4rem;
   height: 4rem;
+  transform: scale(1);
+  transition: 0.3s ease-in-out;
   /* margin-right: 28.2%; */
   /* margin-right: 24.7vw; */
 }
@@ -97,7 +101,7 @@ p {
   width: 53px;
   height: 41px;
 }
-.modal {
+.modal__mb {
   position: fixed;
   top: 0;
   left: -1930px;
@@ -150,10 +154,10 @@ p {
   margin-right: 7.1rem;
 }
 .button {
-  display: block;
   padding: 1.1rem 3rem;
   color: #ffffff;
   border-radius: 50px;
+  transition: 0.3s ease-in-out;
 }
 .header_button {
   display: block;
@@ -205,6 +209,7 @@ p {
   font-weight: 700;
   font-size: 1.6rem;
   background: linear-gradient(94.78deg, #df5950 11.19%, #451046 93.72%);
+  margin-top: 3.2rem;
 }
 .footer {
   display: flex;
@@ -228,7 +233,20 @@ p {
   display: flex;
   position: relative;
 }
-.process_colums::after {
+.process_item {
+  position: relative;
+}
+.process_item:not(:last-child) {
+  /* margin-right: 2.5%; */
+  padding-right: 2.5%;
+}
+
+.process_tit {
+  font-weight: 700;
+  font-size: 3.6rem;
+  line-height: 1.4;
+}
+.process_item::after {
   position: absolute;
   top: 30%;
   left: 0;
@@ -238,14 +256,8 @@ p {
   height: 2px;
   background: linear-gradient(94.26deg, #c89afc 9.51%, #7c6afa 90.23%);
 }
-.process_item:not(:last-child) {
-  margin-right: 2.5%;
-}
-
-.process_tit {
-  font-weight: 700;
-  font-size: 3.6rem;
-  line-height: 1.4;
+.process_item:nth-child(even)::after {
+  background: linear-gradient(94.26deg, #7c6afa 9.51%, #c89afc 90.23%);
 }
 .process_content {
   margin-top: 7rem;
@@ -279,6 +291,12 @@ p {
 .comand {
   padding-top: 24rem;
   padding-bottom: 20rem;
+}
+.block_center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 .comand_img {
   width: 90px;
@@ -336,6 +354,7 @@ p {
   border-radius: 50px;
   background-color: rgb(0, 0, 0);
   color: #ffffff;
+  transition: 0.3s ease-in-out;
 }
 .assemble {
   padding-bottom: 24.4rem;
@@ -382,6 +401,11 @@ p {
 .comand::before {
   transform: rotate(45deg);
 } */
+.modal__header {
+  font-weight: 700;
+  font-size: 4.8rem;
+  line-height: 1.4;
+}
 @media (max-width: 1580px) {
   .main-display {
     padding-left: 6rem;
@@ -433,6 +457,66 @@ p {
     padding: 1.2rem 0;
   }
 }
+.modal {
+  position: fixed;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-x: auto;
+  z-index: 10;
+  padding: 3rem 0;
+  background: rgba(0, 0, 0, 0.8);
+  display: none;
+}
+.modal__inner {
+  position: relative;
+  max-width: 663px;
+  width: 100%;
+  padding: 9rem 1rem;
+  background: #2c2c2c;
+  text-align: center;
+}
+.modal__close {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  display: block;
+  height: 30px;
+  width: 30px;
+  background-image: url(../image/close.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-color: transparent;
+}
+.modal__sub-header {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  color: rgba(255, 255, 255, 0.5);
+  margin-bottom: 2.8rem;
+}
+.modal__input {
+  background: gray;
+  opacity: 0.25;
+  border-radius: 50px;
+  font-size: 1.4rem;
+  line-height: 1.6;
+  color: #ffffff;
+  opacity: 0.8;
+}
+.modal__elements {
+  margin: 0 auto;
+  max-width: 45.6rem;
+}
+.modal__item {
+  height: 4.4rem;
+  margin: 1.6rem auto 0;
+}
+.modal__input {
+  width: 100%;
+  height: 100%;
+  padding: 1.1rem 3rem;
+}
 @media (max-width: 1200px) {
   .header {
     padding: 4rem 8rem 4rem 3rem;
@@ -472,6 +556,20 @@ p {
   }
   .header_button {
     margin-left: 0;
+  }
+}
+/* hover  */
+@media (min-width: 767px) {
+  .logo:hover {
+    transform: scale(1.1);
+  }
+  .button:hover,
+  .comand_btn:hover {
+    box-shadow: 0px 0px 14px 0px #fff;
+  }
+
+  .assemble-social__item:hover {
+    transform: scale(1.1);
   }
 }
 @media (max-width: 768px) {
