--- a/style/style.css
+++ b/style/style.css
@@ -132,6 +132,10 @@ p {
   font-weight: 700;
   width: 40px;
 }
+.noscroll {
+  overflow: hidden;
+  height: 100%;
+}
 .navigation a {
   font-weight: 400;
   font-size: 1.6rem;
