--- a/style/style.css
+++ b/style/style.css
@@ -236,6 +236,7 @@ p {
 .process_colums {
   display: flex;
   position: relative;
+  flex-wrap: wrap;
 }
 .process_item {
   position: relative;
@@ -272,7 +273,8 @@ p {
 }
 .special {
   /* margin-top: 6rem; */
-  margin-top: 41rem;
+  /* margin-top: 41rem; */
+  margin-top: 21.3vw;
   margin-bottom: 21.3rem;
   padding-top: 2rem;
 }
@@ -620,6 +622,11 @@ p {
   .main-display_text {
     font-size: 1.2rem;
   }
+  .comand__list {
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px 40px;
+  }
 }
 @media (max-width: 567px) {
   .main-display {
@@ -636,6 +643,10 @@ p {
     display: block;
     width: 100%;
     height: 50rem;
+    top: 3rem;
+  }
+  .special {
+    margin-top: 85vw;
   }
 }
 /* @media (max-width: 960px) {} */
