--- a/style/style.css
+++ b/style/style.css
@@ -99,7 +99,7 @@ p {
   background-size: contain;
   background-color: #000000;
   width: 53px;
-  height: 41px;
+  height: 22px;
 }
 .modal__mb {
   position: fixed;
@@ -420,48 +420,7 @@ margin-bottom: 0;
   font-size: 4.8rem;
   line-height: 1.4;
 }
-@media (max-width: 1600px) {
-  .main-box {
-    padding: 0% 0 7.1% 5vw;
-    height: 41vw;
-  }
-}
-@media (max-width: 1366px) {
-  .header {
-    padding: 4rem 7rem 4rem 5rem;
-    gap: 5rem;
-  }
-  .logo {
-    margin-right: 5.5vw;
-  }
-  .header_nav {
-    flex-grow: 1;
-    gap: normal;
-    flex-grow: 1;
-  }
-  .main-display_bg {
-    /* top: 191px; */
-  }
-  .title {
-    font-size: 4.9vw;
-    max-width: 55vw;
-  }
-  
-  .main-box {
-    /* padding: 0% 0 2.1% 5vw; */
-  }
-  .main-display_timer {
-    display: flex;
-    gap: 2rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-  }
-  .main-display_item {
-    width: 90px;
-    height: 100px;
-    padding: 1.2rem 0;
-  }
-}
+
 .modal {
   position: fixed;
   inset: 0;
@@ -525,7 +484,42 @@ margin-bottom: 0;
   height: 100%;
   padding: 1.1rem 3rem;
 }
-
+@media (max-width: 1600px) {
+  .main-box {
+    padding: 0% 0 7.1% 5vw;
+    height: 41vw;
+  }
+}
+@media (max-width: 1366px) {
+  .header {
+    padding: 4rem 7rem 4rem 5rem;
+    gap: 5rem;
+  }
+  .logo {
+    margin-right: 5.5vw;
+  }
+  .header_nav {
+    flex-grow: 1;
+    gap: normal;
+    flex-grow: 1;
+  }
+  .title {
+    font-size: 4.9vw;
+    max-width: 55vw;
+  }
+  
+  .main-display_timer {
+    display: flex;
+    gap: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+  .main-display_item {
+    width: 90px;
+    height: 100px;
+    padding: 1.2rem 0;
+  }
+}
 @media (max-width: 1200px) {
   .header {
     padding: 2rem 8rem 2rem 3rem;
@@ -577,9 +571,16 @@ margin-bottom: 0;
     font-size: 6vw;
   }
   .process_colums {
-    justify-content: center;
-    gap: 5%;
+    gap: 4%;
+    flex-wrap: wrap;
   }
+  .process_content {
+    margin-top: 4rem;
+  }
+  .process_item {
+    padding-right: 2.5%;
+  }
+  
 }
 @media (max-width: 835px) {
   .header {
@@ -672,6 +673,15 @@ margin-bottom: 0;
   }
   .title-header {
     text-align: center;
+    font-size: 2.7rem;
+  }
+  .special__description {
+    margin-top: 4rem;
+    font-size: 1.4rem;
+  }
+  .comand_img {
+    width: 50px;
+    margin-right: 2rem;
   }
   .comand__image {
     width: 140px;
@@ -705,6 +715,10 @@ margin-bottom: 0;
   .main-display_bg img {
     display: none;
   }
+  .main-display {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
   .main-display_mobile {
     position: relative;
     background-image: url(../image/main-screen-mobile.jpg);
@@ -712,8 +726,11 @@ margin-bottom: 0;
     background-size: contain;
     display: block;
     width: 100%;
-    height: 50rem;
+    /* height: 43rem; */
+    height: 80vw;
     top: 0;
+    margin: auto;
+    max-width: 400px;
   }
   .special {
     margin-top: 3rem;
@@ -724,6 +741,8 @@ margin-bottom: 0;
   }
   .special_img {
     order: 2;
+    max-width: 400px;
+    margin: 20px auto;
   }
 }
 /* @media (max-width: 960px) {} */
